--- a/ChicagoCH/Base.lproj/Main.storyboard
+++ b/ChicagoCH/Base.lproj/Main.storyboard
@@ -92,6 +92,9 @@
                                 <state key="normal" title="Survey">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="jRB-uY-CgY" kind="show" id="aDj-s8-C1y"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aaN-Zy-4dN">
                                 <rect key="frame" x="239" y="566" width="290" height="127"/>
@@ -113,6 +116,33 @@
                                 <rect key="frame" x="644" y="32" width="104" height="104"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U3f-tL-fXq">
+                                <rect key="frame" x="636" y="809" width="120" height="120"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="map"/>
+                                <connections>
+                                    <action selector="FindingLocations:" destination="nxh-c7-adM" eventType="touchUpInside" id="Ybd-oq-twf"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" editable="NO" text="Locations" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJP-By-CyB">
+                                <rect key="frame" x="633" y="917" width="126" height="47"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" editable="NO" text="  Outreach" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pao-td-vhf">
+                                <rect key="frame" x="20" y="917" width="126" height="71.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="edF-hd-2TS">
+                                <rect key="frame" x="20" y="823" width="120" height="120"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="Outreach"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="nnY-y6-iUW"/>
@@ -136,25 +166,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ygy-ar-hLC">
+                                <rect key="frame" x="0.0" y="100" width="768" height="693"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="768" id="72H-Oa-Gkk"/>
+                                    <constraint firstAttribute="height" constant="693" id="OZ7-eJ-X1N"/>
+                                </constraints>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q9x-5S-2gU">
-                                <rect key="frame" x="20" y="51" width="64" height="64"/>
+                                <rect key="frame" x="20" y="71" width="64" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="Untitled"/>
                                 <connections>
                                     <segue destination="nxh-c7-adM" kind="show" id="WCu-iM-c1m"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YB1-PP-Lq9">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YB1-PP-Lq9">
                                 <rect key="frame" x="176" y="60" width="416" height="47"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="416" id="Dw6-sI-rpn"/>
+                                    <constraint firstAttribute="height" constant="47" id="sIs-9w-tc7"/>
+                                </constraints>
                                 <state key="normal" title="Resources">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="ResourcePressed:" destination="bKW-ld-uFn" eventType="touchUpInside" id="CQC-Cd-7BV"/>
+                                </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5Li-KI-KfU">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5Li-KI-KfU">
                                 <rect key="frame" x="176" y="115" width="416" height="183"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="183" id="VzK-na-fML"/>
+                                    <constraint firstAttribute="width" constant="416" id="jeg-YM-8Gq"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ResourcesCell" id="ju2-yJ-Hnj">
                                         <rect key="frame" x="0.0" y="28" width="416" height="44"/>
@@ -174,14 +221,30 @@
                                 <rect key="frame" x="644" y="51" width="104" height="104"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ygy-ar-hLC">
-                                <rect key="frame" x="0.0" y="306" width="768" height="698"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S63-Tn-fLH">
+                                <rect key="frame" x="196" y="913" width="377" height="91"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
+                                <color key="backgroundColor" red="0.64313725489999995" green="0.76470588240000004" blue="0.49803921569999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Email PDF">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="EmailPDFTOSelf:" destination="bKW-ld-uFn" eventType="touchUpInside" id="Y2r-nw-NNq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="YB1-PP-Lq9" firstAttribute="centerX" secondItem="thK-z8-oo1" secondAttribute="centerX" id="Bem-25-9yx"/>
+                            <constraint firstItem="Ygy-ar-hLC" firstAttribute="top" secondItem="thK-z8-oo1" secondAttribute="top" constant="100" id="V0h-uk-t6L"/>
+                            <constraint firstItem="Ygy-ar-hLC" firstAttribute="centerX" secondItem="thK-z8-oo1" secondAttribute="centerX" id="XrZ-cK-nLc"/>
+                            <constraint firstItem="5Li-KI-KfU" firstAttribute="centerX" secondItem="thK-z8-oo1" secondAttribute="centerX" id="gvj-27-St4"/>
+                            <constraint firstItem="5Li-KI-KfU" firstAttribute="top" secondItem="thK-z8-oo1" secondAttribute="topMargin" constant="95" id="l41-B2-Kh1"/>
+                            <constraint firstAttribute="bottom" secondItem="Ygy-ar-hLC" secondAttribute="bottom" constant="231" id="uCC-cd-y51"/>
+                            <constraint firstItem="YB1-PP-Lq9" firstAttribute="top" secondItem="thK-z8-oo1" secondAttribute="topMargin" constant="40" id="vUu-H6-trR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="3WA-6z-Ngi"/>
                     </view>
                     <connections>
@@ -193,6 +256,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xfb-1D-Plf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="918.75" y="287.6953125"/>
+        </scene>
+        <!--Survey-->
+        <scene sceneID="80m-vF-o7F">
+            <objects>
+                <viewController id="jRB-uY-CgY" customClass="Survey" customModule="ChicagoCH" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AF4-VF-8EJ" customClass="Sur">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BRK-ae-bhe">
+                                <rect key="frame" x="20" y="57" width="64" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="Untitled"/>
+                                <connections>
+                                    <segue destination="nxh-c7-adM" kind="show" id="dZO-T7-5Gf"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="CCACLogoFinalPNG" translatesAutoresizingMaskIntoConstraints="NO" id="56h-48-W5i">
+                                <rect key="frame" x="644" y="37" width="104" height="104"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Dek-Kt-lfw"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L3S-8R-E3q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1787.5" y="304.6875"/>
         </scene>
         <!--Check In Page-->
         <scene sceneID="8bG-Eb-Ryl">
@@ -516,10 +608,12 @@
     </scenes>
     <resources>
         <image name="CCACLogoFinalPNG" width="296" height="164"/>
+        <image name="Outreach" width="700" height="700"/>
         <image name="Untitled" width="64" height="64"/>
+        <image name="map" width="700" height="700"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="mYA-O9-Rzi"/>
-        <segue reference="WCu-iM-c1m"/>
+        <segue reference="dZO-T7-5Gf"/>
     </inferredMetricsTieBreakers>
 </document>
